// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает простой тэг 1`] = `<div />`;

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает тэг с аттрибутами 1`] = `
<div
  attr="abc"
/>
`;

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает тэг с аттрибутами и ребенком в виде строки html 1`] = `
<div
  attr="abc"
>
  <hr />
</div>
`;

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает тэг с аттрибутами и ребенком-строкой 1`] = `
<div
  attr="abc"
>
  hello world
</div>
`;

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает тэг с аттрибутами и ребенком-элементом 1`] = `
<div
  attr="abc"
>
  <div />
</div>
`;

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает тэг с ребенком в виде строки html 1`] = `
<div>
  <hr />
</div>
`;

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает тэг с ребенком-строкой 1`] = `
<div>
  hello world
</div>
`;

exports[`Турбо-оверлей Утилиты Создание элементов Cоздает тэг с ребенком-элементом 1`] = `
<div>
  <div />
</div>
`;
